<resources>
    <string name="app_name">ReachabilityResearch</string>
    <string name="start">START</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="next">Next</string>
    <string name="press_1">PRESS 1</string>
    <string name="please_select_your_dominant_hand">Please select your dominant hand</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="end">End</string>
    <string name="press_2">PRESS 2</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="use_dominant_hand">Use Dominant Hand</string>
    <string name="use_non_dominant_hand">Use Non-dominant Hand</string>
    <string name="press_4">PRESS 4</string>
    <string name="press_3">PRESS 3</string>
    <string name="press_5">PRESS 5</string>
</resources>
