<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen5">

    <Button
        android:id="@+id/c1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/c2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/c2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_2"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/c3"
        app:layout_constraintStart_toEndOf="@+id/c1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/c3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_3"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/c4"
        app:layout_constraintStart_toEndOf="@+id/c2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/c4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_4"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/c5"
        app:layout_constraintStart_toEndOf="@+id/c3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button_disp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:background="#002C7061"
        android:text="@string/press_2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/next1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next1"
        android:layout_width="150dp"
        android:layout_height="163dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/use_dominant_hand"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_disp1"
        app:layout_constraintStart_toStartOf="@+id/button_disp1"
        app:layout_constraintTop_toBottomOf="@+id/button_disp1" />

    <Button
        android:id="@+id/c5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_5"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/c6"
        app:layout_constraintStart_toEndOf="@+id/c4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/c6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/_6"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/c5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>