<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leftscreen">

    <Button
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/l2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/l3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1" />

    <Button
        android:id="@+id/l3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_3"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/l4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l2" />

    <Button
        android:id="@+id/l4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="128dp"
        android:text="@string/_4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l3" />

    <TextView
        android:id="@+id/button_disp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:background="#2C7061"
        android:text="@string/press_1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/end1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/end1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:text="@string/end"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_disp2" />
</androidx.constraintlayout.widget.ConstraintLayout>